# master

./: README.md  backup_year_mail.rc  chording.ahk  monitor_low_heap.rc  plot.rc
R/: benchmark.txt  usl.R
R/ggplot2/: Makefile  gradient.awk  gradient2.awk  latencias.txt  lincoln.awk  rule_of_three.awk  tiempos.awk
ahk/: chording.ahk
awk/: clippings.awk  getThreads.awk  srt.awk  statistics.awk
bat/: download.sh  eject.bat  embed_file_in_image.bat  extract_file_from_image.bat  get.bat
books/: El gran engaño _ Mariana Mazzucato & Rosie Collington _ 2024.md  Pobreza.Made in usa__Matthew Desmond__2023.md
cubism/: cubism.htm
d3/holidays/: calendar.css  code.html  festivos.csv  vacaciones.csv  (+2 more)
iboli/: notes2pdf  pegasus-mobile-notetaker-0.4.1.patch
jsamp/: jsamp-postproc.py
jvmti/: minimal.c  mkfile  sigprof.c  sigprof.h
kafka/: fast_rollout.uxf  modulor.uxf
powershell/: replace.ps1
readings/: DDIA_Distributed_systems.txt  DDIA_Transactions.txt  serve your query only clients over a replica.uxf
rest testing/: GET host.bat  POST host.bat  base.bat  create post.body  create post.req  curl-format.txt
selenium/: pom.xml
shortwave/: quicksearch.js  waves.txt
tampermonkey/: clipboard saver.js  clipboard saver.user.js  gistbox_styling.js  gistbox_styling.user.js  github editor.user.js  mercadona.js  mercadona.user.js  oneshallpass.user.js  telegram_stylus.json  totp.user.js  webmail_shortcuts.js  webmail_shortcuts.user.js
umlet/: actor.txt  better_repo_symbol.txt  columnar.uxf  design.uxf  kafka  kv.txt
ws/: .gitignore  Cargo.toml
ws/src/: main.rs
(+38 files in other folders)
