[package]
name = "zenit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*"}
tokio = {version = "1.36.*", features = ["full"] }
log = "0.4.*"
env_logger = "0.11.*"
reqwest = "0.12.*"
reqwest-websocket = "0.3.0"
futures-util = "0.3.*"